# ISIS_Protocol_Attack

./: .gitignore  README.md  build.ps1  isis-attack.spec  pyproject.toml
.claude/: settings.local.json
docker/topo1-single-area/: Dockerfile.attacker  docker-compose.yml
docs/superpowers/plans/: 2026-05-13-isis-protocol-attack-plan.md
docs/superpowers/specs/: 2026-05-13-isis-protocol-attack-design.md
isis_attack/: __init__.py  __main__.py
isis_attack/attacks/: base.py
isis_attack/attacks/adjacency/: adjacency_break.py  dis_hijack.py  iih_inject.py
isis_attack/attacks/dos/: db_overflow.py  flood.py  spf_recalc.py
isis_attack/cli/: commands.py  formatters.py  main.py
isis_attack/config/: __init__.py  config.py  types.py
isis_attack/core/: active_engine.py  arp_spoof.py  auth.py  neighbor.py  packet.py  sniffer.py
isis_attack/gui/: __init__.py  app.py  attack_tree.py  config_form.py  log_panel.py  pcap_tools.py  runner.py  styles.py
isis_attack/network/: adapter.py  sender.py
isis_attack/utils/: validators.py
tests/integration/: conftest.py  test_topology_attacks.py
tests/unit/: test_active_engine.py  test_adjacency_break.py  test_attack_base.py  test_auth.py  test_cli.py  test_config_types.py  test_db_overflow.py  test_dis_hijack.py  test_fight_back.py  test_flood.py  test_gui_integration.py  test_iih_inject.py  test_max_seq.py  test_mitm.py  test_neighbor.py  test_overload_bit.py  test_packet.py  test_purge_lsp.py  test_replay.py  test_route_inject.py  test_sender.py  test_sniffer.py  test_spf_recalc.py  test_validators.py
(+10 files in other folders)
